--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
     <style>
         :root {
             --neon-blue: #2563eb;
-            --deep-space: #020202;
+            --neon-glow: #3b82f6;
+            --deep-space: #010101;
+        }
+        html {
+            scroll-behavior: smooth;
         }
         body {
             background-color: var(--deep-space);
@@ -25,36 +29,26 @@
             scrollbar-color: var(--neon-blue) transparent;
         }
         
-        /* Custom Scrollbar for Chrome/Safari/Edge */
-        ::-webkit-scrollbar {
-            width: 6px;
-        }
-        ::-webkit-scrollbar-track {
-            background: rgba(0, 0, 0, 0.3);
-        }
-        ::-webkit-scrollbar-thumb {
-            background: var(--neon-blue);
-            border-radius: 10px;
-            box-shadow: 0 0 10px var(--neon-blue);
-        }
+        ::-webkit-scrollbar { width: 6px; }
+        ::-webkit-scrollbar-track { background: rgba(0, 0, 0, 0.5); }
+        ::-webkit-scrollbar-thumb { background: var(--neon-blue); border-radius: 10px; }
 
-        .mono {
-            font-family: 'JetBrains Mono', monospace;
-        }
+        .mono { font-family: 'JetBrains Mono', monospace; text-shadow: 0 0 10px rgba(37, 99, 235, 0.5); }
         
-        /* Deep Space Layers - Kept FIXED during scroll */
+        /* Layer 1: Deep Nebula (Fixed Background) */
         .nebula {
             position: fixed;
-            inset: -50px;
+            inset: -100px;
             background: 
-                radial-gradient(circle at 20% 30%, rgba(37, 99, 235, 0.08) 0%, transparent 50%),
-                radial-gradient(circle at 80% 70%, rgba(30, 58, 138, 0.1) 0%, transparent 50%),
-                radial-gradient(circle at 50% 50%, rgba(0, 0, 0, 1) 0%, rgba(2, 2, 2, 0.8) 100%);
+                radial-gradient(circle at 15% 25%, rgba(37, 99, 235, 0.1) 0%, transparent 50%),
+                radial-gradient(circle at 85% 75%, rgba(30, 58, 138, 0.12) 0%, transparent 50%),
+                radial-gradient(circle at 50% 50%, rgba(2, 2, 2, 1) 0%, rgba(0, 0, 0, 0.95) 100%);
             z-index: -3;
-            filter: blur(40px);
+            filter: blur(60px);
             pointer-events: none;
         }
 
+        /* Layer 2: Starfield (Fixed Background) */
         .starfield {
             position: fixed;
             inset: 0;
@@ -62,57 +56,48 @@
             pointer-events: none;
         }
 
+        /* Layer 3: HUD Digital Grid (Fixed Background) */
         .digital-grid {
             position: fixed;
             inset: 0;
-            background-image: linear-gradient(rgba(37, 99, 235, 0.03) 1px, transparent 1px),
-                              linear-gradient(90deg, rgba(37, 99, 235, 0.03) 1px, transparent 1px);
-            background-size: 100px 100px;
+            background-image: 
+                linear-gradient(rgba(37, 99, 235, 0.04) 1px, transparent 1px),
+                linear-gradient(90deg, rgba(37, 99, 235, 0.04) 1px, transparent 1px);
+            background-size: 80px 80px;
             z-index: -1;
             pointer-events: none;
-            mask-image: radial-gradient(circle at center, black, transparent 80%);
+            mask-image: radial-gradient(circle at center, black 10%, transparent 90%);
         }
 
-        /* Glitch Animation */
-        @keyframes glitch {
-            0% { transform: translate(0); }
-            1% { transform: translate(-2px, 1px); }
-            2% { transform: translate(2px, -1px); }
-            3% { transform: translate(0); }
-            100% { transform: translate(0); }
-        }
-        .glitch-effect {
-            animation: glitch 10s infinite;
-        }
-
-        /* Ray Flow */
-        @keyframes rayFlow {
-            0% { stroke-dashoffset: 100; opacity: 0.1; }
-            50% { opacity: 0.6; }
-            100% { stroke-dashoffset: 0; opacity: 0.1; }
-        }
-        .laser-link {
-            stroke-dasharray: 10 5;
-            animation: rayFlow 3s linear infinite;
-        }
-
-        /* HUD Scanning Line */
         .scanning-line {
             position: fixed;
             top: 0;
             left: 0;
             width: 100%;
-            height: 1px;
+            height: 2px;
             background: linear-gradient(90deg, transparent, var(--neon-blue), transparent);
-            box-shadow: 0 0 10px var(--neon-blue);
+            box-shadow: 0 0 20px var(--neon-blue);
             z-index: 100;
             pointer-events: none;
-            opacity: 0.1;
-            animation: scan 10s linear infinite;
+            opacity: 0.15;
+            animation: scan 12s linear infinite;
         }
-        @keyframes scan {
-            0% { transform: translateY(-100%); }
-            100% { transform: translateY(100vh); }
+        @keyframes scan { 0% { transform: translateY(-100%); } 100% { transform: translateY(100vh); } }
+
+        @keyframes rayFlow {
+            0% { stroke-dashoffset: 100; opacity: 0.2; }
+            50% { opacity: 0.8; }
+            100% { stroke-dashoffset: 0; opacity: 0.2; }
+        }
+        .laser-link { stroke-dasharray: 15 5; animation: rayFlow 4s linear infinite; }
+
+        .glitch-effect { animation: glitch 8s infinite; }
+        @keyframes glitch {
+            0%, 95%, 100% { transform: translate(0); }
+            96% { transform: translate(-2px, 1px); }
+            97% { transform: translate(2px, -1px); }
+            98% { transform: translate(-1px, 2px); }
+            99% { transform: translate(1px, -2px); }
         }
     </style>
 <script type="importmap">
@@ -135,25 +120,18 @@
     <div id="root"></div>
     <script>
         const starfield = document.getElementById('starfield');
-        for (let i = 0; i < 150; i++) {
+        for (let i = 0; i < 200; i++) {
             const star = document.createElement('div');
             star.style.position = 'absolute';
-            star.style.background = 'white';
+            star.style.background = '#ffffff';
             star.style.borderRadius = '50%';
             star.style.width = Math.random() * 2 + 'px';
             star.style.height = star.style.width;
             star.style.left = Math.random() * 100 + '%';
             star.style.top = Math.random() * 100 + '%';
-            star.style.opacity = Math.random() * 0.5 + 0.2;
+            star.style.opacity = Math.random() * 0.7 + 0.1;
             starfield.appendChild(star);
         }
-
-        window.addEventListener('mousemove', (e) => {
-            const x = (e.clientX / window.innerWidth - 0.5) * 20;
-            const y = (e.clientY / window.innerHeight - 0.5) * 20;
-            document.getElementById('nebula').style.transform = `translate(${x}px, ${y}px)`;
-            document.getElementById('starfield').style.transform = `translate(${x*1.5}px, ${y*1.5}px)`;
-        });
     </script>
 </body>
 </html>
