--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>APARAT AI | Profesjonalne Sesje Produktowe</title>
+    <title>Aparat AI | Profesjonalne Sesje Produktowe</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;600;700&family=JetBrains+Mono:wght@400;700&family=Inter:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;600;700&family=JetBrains+Mono:wght@400;700&family=Orbitron:wght@700;900&display=swap" rel="stylesheet">
     <style>
         :root {
-            --neon-blue: #2563eb;
-            --neon-glow: #3b82f6;
+            --neon-blue: #3b82f6;
+            --electric-blue: #60a5fa;
             --deep-space: #010101;
         }
         html {
@@ -33,14 +33,15 @@
         ::-webkit-scrollbar-track { background: rgba(0, 0, 0, 0.5); }
         ::-webkit-scrollbar-thumb { background: var(--neon-blue); border-radius: 10px; }
 
-        .mono { font-family: 'JetBrains Mono', monospace; text-shadow: 0 0 10px rgba(37, 99, 235, 0.5); }
+        .mono { font-family: 'JetBrains Mono', monospace; text-shadow: 0 0 10px rgba(59, 130, 246, 0.5); }
+        .logo-font { font-family: 'Orbitron', sans-serif; }
         
-        /* Layer 1: Deep Nebula (Fixed Background) */
+        /* Layer 1: Deep Nebula */
         .nebula {
             position: fixed;
             inset: -100px;
             background: 
-                radial-gradient(circle at 15% 25%, rgba(37, 99, 235, 0.1) 0%, transparent 50%),
+                radial-gradient(circle at 15% 25%, rgba(59, 130, 246, 0.1) 0%, transparent 50%),
                 radial-gradient(circle at 85% 75%, rgba(30, 58, 138, 0.12) 0%, transparent 50%),
                 radial-gradient(circle at 50% 50%, rgba(2, 2, 2, 1) 0%, rgba(0, 0, 0, 0.95) 100%);
             z-index: -3;
@@ -48,7 +49,7 @@
             pointer-events: none;
         }
 
-        /* Layer 2: Starfield (Fixed Background) */
+        /* Layer 2: Starfield */
         .starfield {
             position: fixed;
             inset: 0;
@@ -56,13 +57,13 @@
             pointer-events: none;
         }
 
-        /* Layer 3: HUD Digital Grid (Fixed Background) */
+        /* Layer 3: HUD Digital Grid */
         .digital-grid {
             position: fixed;
             inset: 0;
             background-image: 
-                linear-gradient(rgba(37, 99, 235, 0.04) 1px, transparent 1px),
-                linear-gradient(90deg, rgba(37, 99, 235, 0.04) 1px, transparent 1px);
+                linear-gradient(rgba(59, 130, 246, 0.04) 1px, transparent 1px),
+                linear-gradient(90deg, rgba(59, 130, 246, 0.04) 1px, transparent 1px);
             background-size: 80px 80px;
             z-index: -1;
             pointer-events: none;
@@ -75,8 +76,8 @@
             left: 0;
             width: 100%;
             height: 2px;
-            background: linear-gradient(90deg, transparent, var(--neon-blue), transparent);
-            box-shadow: 0 0 20px var(--neon-blue);
+            background: linear-gradient(90deg, transparent, var(--electric-blue), transparent);
+            box-shadow: 0 0 20px var(--electric-blue);
             z-index: 100;
             pointer-events: none;
             opacity: 0.15;
@@ -98,6 +99,10 @@
             97% { transform: translate(2px, -1px); }
             98% { transform: translate(-1px, 2px); }
             99% { transform: translate(1px, -2px); }
+        }
+
+        .logo-glow {
+            text-shadow: 0 0 15px rgba(96, 165, 250, 0.6);
         }
     </style>
 <script type="importmap">
